--- a/src/app/create-account-bottom-sheet/create-account-bottom-sheet.component.scss
+++ b/src/app/create-account-bottom-sheet/create-account-bottom-sheet.component.scss
@@ -1,14 +1,11 @@
-#meetupImage{
-    max-width: 100.5px;
-    max-height: 50.25px;
-    min-width: 50px;
-    min-height: 25px;
+#meetupImage {
+  width: 100px;
 }
-.patient-button{
-    border-radius: 7px;
-    margin: 0px 50px 0px 50px;
+.patient-button {
+  border-radius: 7px;
+  margin: 0px 50px 0px 50px;
 }
-.doctor-button{
-    border-radius: 7px;
-    margin: 0px 50px 0px 50px;
+.doctor-button {
+  border-radius: 7px;
+  margin: 0px 50px 0px 50px;
 }
