--- a/src/app/feature-modules/patients/meetup-lobby/meetup-lobby.component.html
+++ b/src/app/feature-modules/patients/meetup-lobby/meetup-lobby.component.html
@@ -454,55 +454,6 @@
     </mat-toolbar>
 
 
-    <ng-container *ngIf="currentQueue.getMyBooking()">
-
-      <div [ngClass]="{'patient-list-box': true, 'my-booking-bg':true}" fxLayout="row" fxLayoutAlign="start start">
-
-
-
-        <mat-card-header class="patient-info-header">
-          <img mat-card-avatar src="booking.getPicUrl()" src-fallback="{{session.profilePlaceholder}}">
-          <mat-card-title fxLayout="row">
-            <mat-label class="header-label">{{currentQueue.getMyBooking().getName()}}</mat-label>
-
-            <ng-container
-              *ngIf="!currentQueue.getMyBooking().isCurrentPatient() && currentQueue.getMyBooking().isProcessed()">
-              <mat-icon fxFlexOffset="10px" class="processed-icon"
-                matTooltip="This patient has been processed by the doctor" matTooltipPosition="above">done_outline
-              </mat-icon>
-            </ng-container>
-            <ng-container
-              *ngIf="!currentQueue.getMyBooking().isCurrentPatient() && currentQueue.getMyBooking().isPending()">
-              <mat-icon fxFlexOffset="10px" class="pending-icon"
-                matTooltip="This patient is in pending state and will be processed later by the doctor"
-                matTooltipPosition="above">tour</mat-icon>
-            </ng-container>
-          </mat-card-title>
-          <mat-card-subtitle fxLayout="row">
-            {{currentQueue.getMyBooking().getStatus() || 'offline'}}
-          </mat-card-subtitle>
-        </mat-card-header>
-
-        <span fxFlex="1 1 auto"></span>
-        <mat-card
-          [ngClass]="{'position-card': true, 'position-card-1': currentQueue.getMyBooking().getQueuePlace()===1, 'position-card-2': currentQueue.getMyBooking().getQueuePlace()==2, 'position-card-3': currentQueue.getMyBooking().getQueuePlace()==3}">
-          <mat-card-content>
-            <mat-label
-              [ngClass]="{'first-label': currentQueue.getMyBooking().getQueuePlace()===1 || currentQueue.getMyBooking().getQueuePlace()===2 || currentQueue.getMyBooking().getQueuePlace()===3}">
-              #{{currentQueue.getMyBooking().getQueuePlace()}}</mat-label>
-            <!-- [ngClass]="{'live-label': (queue.getStatus() !=='scheduled')}" -->
-          </mat-card-content>
-        </mat-card>
-        <span fxFlex="1 1 10px"></span>
-
-
-
-
-      </div>
-    </ng-container>
-
-
-
     <div #bookingList class="booking-list-wrapper">
 
 
@@ -538,44 +489,96 @@
 
 
         <div [ngClass]="{'patient-list-box': true, 'current-patient-bg':booking.isCurrentPatient()}"
-          *ngFor="let booking of currentQueue.getBookings(); index as i" fxLayout="row" fxLayoutAlign="start start">
+          *ngFor="let booking of currentQueue.getBookings(); index as i" fxLayout="column">
 
 
+          <div class="booking-list-inner-row" fxLayout="row" fxLayoutAlign="start start">
+            <mat-card-header class="patient-info-header">
+              <img mat-card-avatar src="booking.getPicUrl()" src-fallback="{{session.profilePlaceholder}}">
+              <mat-card-title fxLayout="row">
+                <mat-label [ngClass]="{'header-label':true, 'white-label': booking.isCurrentPatient()}">
+                  {{booking.getName()}}{{(currentQueue.getMyBooking() && currentQueue.getMyBooking().getBookingId() ===
+                  booking.getBookingId())?' (You)':''}}</mat-label>
 
-          <mat-card-header class="patient-info-header">
-            <img mat-card-avatar src="booking.getPicUrl()" src-fallback="{{session.profilePlaceholder}}">
-            <mat-card-title fxLayout="row">
-              <mat-label class="header-label">{{booking.getName()}}</mat-label>
+                <ng-container *ngIf="!booking.isCurrentPatient() && booking.isProcessed()">
+                  <mat-icon fxFlexOffset="10px" class="processed-icon"
+                    matTooltip="This patient has been processed by the doctor" matTooltipPosition="above">done_outline
+                  </mat-icon>
+                </ng-container>
+                <ng-container *ngIf="!booking.isCurrentPatient() && booking.isPending()">
+                  <mat-icon fxFlexOffset="10px" class="pending-icon"
+                    matTooltip="This patient is in pending state and will be processed later by the doctor"
+                    matTooltipPosition="above">tour</mat-icon>
+                </ng-container>
+              </mat-card-title>
+              <!-- [ngClass]="{'white-label': booking.isCurrentPatient()}" -->
+              <mat-card-subtitle fxLayout="row" [ngClass]="{'white-label': booking.isCurrentPatient()}">
+                {{booking.getStatus() || 'offline'}}
+              </mat-card-subtitle>
+            </mat-card-header>
 
-              <ng-container *ngIf="!booking.isCurrentPatient() && booking.isProcessed()">
-                <mat-icon fxFlexOffset="10px" class="processed-icon"
-                  matTooltip="This patient has been processed by the doctor" matTooltipPosition="above">done_outline
-                </mat-icon>
-              </ng-container>
-              <ng-container *ngIf="!booking.isCurrentPatient() && booking.isPending()">
-                <mat-icon fxFlexOffset="10px" class="pending-icon"
-                  matTooltip="This patient is in pending state and will be processed later by the doctor"
-                  matTooltipPosition="above">tour</mat-icon>
-              </ng-container>
-            </mat-card-title>
-            <mat-card-subtitle fxLayout="row">
-              {{booking.getStatus() || 'offline'}}
-            </mat-card-subtitle>
-          </mat-card-header>
+            <span fxFlex="1 1 auto"></span>
+            <mat-card
+              [ngClass]="{'position-card': true, 'position-card-1': booking.getQueuePlace() === 1, 'position-card-2': booking.getQueuePlace()===2, 'position-card-3': booking.getQueuePlace()==3}">
+              <mat-card-content>
+                <mat-label
+                  [ngClass]="{'first-label': booking.getQueuePlace()===1 || booking.getQueuePlace()===2 || booking.getQueuePlace()===3}">
+                  #{{booking.getQueuePlace()}}</mat-label>
+                <!-- [ngClass]="{'live-label': (queue.getStatus() !=='scheduled')}" -->
+              </mat-card-content>
+            </mat-card>
+            <span fxFlex="1 1 10px"></span>
 
-          <span fxFlex="1 1 auto"></span>
-          <mat-card
-            [ngClass]="{'position-card': true, 'position-card-1': i==0, 'position-card-2': i==1, 'position-card-3': i==2}">
-            <mat-card-content>
-              <mat-label [ngClass]="{'first-label': i===0 || i===1 || i===2}">#{{i+1}}</mat-label>
-              <!-- [ngClass]="{'live-label': (queue.getStatus() !=='scheduled')}" -->
-            </mat-card-content>
-          </mat-card>
-          <span fxFlex="1 1 10px"></span>
+          </div>
 
+          <!-- Information for my booking -->
+          <ng-container *ngIf="booking.getPatientId() === userData.getUserId()">
 
+            <mat-accordion fxFlexOffset="5px" class="booking-list-inner-row my-booking-info-pannel">
+              <mat-expansion-panel>
+                <mat-expansion-panel-header>
+                  <mat-panel-title>
+                    <div fxLayout="row">
+                      <mat-label> Waiting time - {{currentQueue.getMyBooking().getSelfWaitingTimeString()}} </mat-label>
+                    </div>
+                  </mat-panel-title>
+                  <mat-panel-description>
+                    <span fxFlex="1 1 auto"></span>
+                    <mat-icon>book_online</mat-icon>
+                  </mat-panel-description>
+                </mat-expansion-panel-header>
+                <mat-card class="queue-card">
 
+                  <mat-card-content fxLayout="column" fxLayoutGap="15px">
+                    <div fxLayout="row" fxLayoutGap="30px">
+                      <mat-label>Fees</mat-label>
+                      <span fxFlex="1 1 auto"></span>
+                      <mat-label>{{currentQueue.getFees()}}</mat-label>
+                    </div>
+                    <div fxLayout="row" fxLayoutGap="30px">
+                      <mat-label>Limit</mat-label>
+                      <span fxFlex="1 1 auto"></span>
+                      <mat-label>{{currentQueue.getPatientLimit()}}</mat-label>
+                    </div>
+                    <div fxLayout="row" fxLayoutGap="30px">
+                      <mat-label>Type</mat-label>
+                      <span fxFlex="1 1 auto"></span>
+                      <mat-label>{{utils.initCap(currentQueue.getType()||'Unavailable')}}</mat-label>
+                    </div>
+                    <div fxLayout="row" fxLayoutGap="30px">
+                      <mat-label>Payment Option</mat-label>
+                      <span fxFlex="1 1 auto"></span>
+                      <mat-label>{{utils.initCap(currentQueue.getPaymentOption() || 'Unavailable')}}</mat-label>
+                    </div>
+                  </mat-card-content>
 
+                </mat-card>
+              </mat-expansion-panel>
+
+            </mat-accordion>
+
+          </ng-container>
+          <!-- End of Information for my booking -->
         </div>
       </div>
     </div>
