--- a/src/scss/_vars.scss
+++ b/src/scss/_vars.scss
@@ -1,24 +1,30 @@
-
-$primary: #4285F4;
-$accent: #0F9D58;
-$warn: #DB4437;
-$alert: #F4B400;
+$primary: #4285f4;
+$accent: #0f9d58;
+$warn: #db4437;
+$alert: #f4b400;
 $textPrimary: #737373;
 $icon: #476282;
 
-$white: #FFFFFF;
+$white: #ffffff;
 
-$grey-lighter:#F2F2F2;
-$grey-medium:#E6E6E6;
-$grey-darker:#CCCCCC;
+$grey-lighter: #f2f2f2;
+$grey-medium: #e6e6e6;
+$grey-darker: #cccccc;
 
-$g-text-on-black:#b2b2b2;
-$g-black-lighter:#353535;
-$g-black-darker:#303030;
+$g-text-on-black: #b2b2b2;
+$g-black-lighter: #353535;
+$g-black-darker: #303030;
 
-$light-green: #0f9d5827;
+$accent-dark: #09914f;
+
+$light-green: #0f9d58d8;
+$light-red: #db4537af;
 
 $conferenceBg: #2b2c33;
 $conferenceBottomBg: #1f1f1f;
 
-$meetup-brand-black:#353535;
+$meetup-brand-black: #353535;
+
+$primary-dark: #0665ff;
+
+$primary-light: #91bbff;
