--- a/src/app/feature-modules/doctor/main-navigation/main-navigation.component.scss
+++ b/src/app/feature-modules/doctor/main-navigation/main-navigation.component.scss
@@ -17,13 +17,13 @@
    width: 10px;
    background: inherit;
  } */
- /* mat-sidenav-content::-webkit-scrollbar-thumb { */
-   /* border-radius: 10px; */
-   /* box-shadow: inset 0 0 6px rgba(0,0,0,.3); */
-   /* background-color: #A9A9A9; */
-   /* border: 1px solid #000; */
- 
- /* } */
+/* mat-sidenav-content::-webkit-scrollbar-thumb { */
+/* border-radius: 10px; */
+/* box-shadow: inset 0 0 6px rgba(0,0,0,.3); */
+/* background-color: #A9A9A9; */
+/* border: 1px solid #000; */
+
+/* } */
 /* .parent{
    height: 100%;
    width: 100%;
@@ -41,19 +41,18 @@
   background-color: white;
  } */
 
- .sidenav-container {
+.sidenav-container {
   height: 100%;
 }
 
 .sidenav {
-
 }
 
 .sidenav .mat-toolbar {
   background: inherit;
   position: relative;
 }
-mat-sidenav-content{
+mat-sidenav-content {
   /* height: 100%;
   overflow: hidden; */
 }
@@ -62,33 +61,32 @@ mat-sidenav-content{
   top: 0;
   z-index: 1;
 }
-.header-toolbar{
+.header-toolbar {
   background-color: white;
 }
-#sidenavInner{
+#sidenavInner {
   height: 100%;
 }
-#bottomCloser{
+#bottomCloser {
   width: 100%;
 }
-#meetupImage{
+#meetupImage {
   width: 150px;
   height: 700px;
   z-index: 10px;
   margin-right: 25px;
-  
 }
-#meetupImageSmall{
+#meetupImageSmall {
   width: 50px;
-  height: 50px;  
+  height: 50px;
   z-index: 10px;
 }
-#profileIcon{
+#profileIcon {
   width: 30px;
   height: 30px;
   border-radius: 15px;
 }
-#profileIndicatorCard{
+#profileIndicatorCard {
   height: fit-content;
   width: fit-content;
   border-radius: 20px;
@@ -96,20 +94,28 @@ mat-sidenav-content{
   background-color: #e7f3ff;
   cursor: pointer;
 }
-.profile-indicator-title{
+.profile-indicator-title {
   margin-right: 12px;
   font-size: 16px;
   color: #0078ff;
   font-family: "roboto-bold";
 }
-.list-item-div{
+.list-item-div {
   height: 100%;
   width: 100%;
+  justify-content: start;
+  align-items: center;
 }
-.header-toolbar-row1{
+.list-item-div-closed {
+  height: 100%;
+  width: 100%;
+  justify-content: center;
+  align-items: center;
+}
+.header-toolbar-row1 {
   width: 100%;
 }
-.notification-icon{
-  color: #476282;  
+.notification-icon {
+  color: #476282;
   cursor: pointer;
 }
