--- a/src/app/login/login.component.scss
+++ b/src/app/login/login.component.scss
@@ -1,56 +1,83 @@
-.login-form{
-    width: fit-content;
-    height: fit-content;
+@import "src/scss/vars";
+
+.login-form {
+  width: fit-content;
+  height: fit-content;
 }
-#parent{
-    height: 100%;
-    background-color: #ffffff;
+.login-form-sm {
+  width: 85%;
+  height: fit-content;
+}
+#parent {
+  height: 100%;
+  background-color: white;
 }
 
-.login-card{
-    background-color: #ffffff;
-    height: fit-content;
-    width: fit-content;
-    overflow: auto;
-}
-#meetupImage{
-    max-width: 201.5px;
-    max-height: 100.25px;
-    min-width: 50px;
-    min-height: 25px;
-}
 ::ng-deep .mat-horizontal-stepper-header-container {
-    display: none !important;
+  display: none !important;
 }
-#headerLabel{
-    font-size: x-large;
+
+.login {
+  border-radius: 7px;
+  color: white;
 }
-.login{    
-    border-radius: 7px;
-    color: white;
+.hor-line {
+  background-color: #dde0e3;
+  height: 1px;
+  margin: 40px 0px 30px 0px;
 }
-.hor-line{
-    background-color: #dde0e3;
-    height: 1px;
-    margin: 40px 0px 30px 0px;
+.create-account {
+  color: white;
+  width: fit-content;
+  padding: 0px 15px 0px 15px;
+  border-radius: 7px;
+  align-self: center;
 }
-.create-account{
-    color: white;
-    width: fit-content;
-    padding: 0px 15px 0px 15px;
-    border-radius: 7px;
-    align-self: center;
+.forgot-class {
+  color: #4285f4;
+  font-size: small;
+  width: fit-content;
+  cursor: pointer;
 }
-.forgot-class{
-    color:  #4285F4;
-    font-size: small;
-    width: fit-content;
-    cursor: pointer;
+.back-button {
+  width: fit-content;
 }
-.back-button{
-    width: fit-content;
+.next-button {
+  width: fit-content;
+  align-self: flex-end;
 }
-.next-button{
-    width: fit-content;
-    align-self: flex-end;
+.about-label {
+  font-size: 12px;
+  cursor: pointer;
+}
+
+.login-card {
+  background-color: #ffffff;
+  height: fit-content;
+  width: 100%;
+  overflow: auto;
+  border-radius: 12px;
+}
+
+.splash-logo-lg {
+  width: 150px;
+}
+.splash-logo-md {
+  width: 120px;
+}
+.splash-logo-sm {
+  width: 90px;
+}
+
+.header-label-lg {
+  font-size: larger;
+}
+.header-label-md {
+  font-size: medium;
+}
+.header-label-sm {
+  font-size: small;
+}
+#progressIndicator {
+  border-radius: 12px;
 }
